--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ variables:
 build-job:
   stage: build
   rules:
-    - if: $CI_COMMIT_BRANCH != "main"
+    - if: $CI_COMMIT_BRANCH == "production"
+      when: manual
 
   script:
     - echo "Hello, $GITLAB_USER_LOGIN!"
